[gd_scene load_steps=19 format=2]

[ext_resource path="res://Imagens/2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ScirptPacientes.gd" type="Script" id=2]
[ext_resource path="res://Fontes/MANDATOR.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=11]
size = 110
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.0784314, 0.188235, 0.317647, 1 )

[sub_resource type="DynamicFontData" id=20]
font_path = "res://Fontes/NewakeFont-Demo.otf"

[sub_resource type="DynamicFont" id=2]
size = 220
font_data = SubResource( 20 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Fontes/NewakeFont-Demo.otf"

[sub_resource type="DynamicFont" id=4]
size = 75
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://Fontes/NewakeFont-Demo.otf"

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = SubResource( 10 )

[sub_resource type="DynamicFont" id=13]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.0784314, 0.188235, 0.317647, 1 )

[sub_resource type="DynamicFont" id=17]
size = 90
font_data = ExtResource( 3 )

[sub_resource type="DynamicFontData" id=18]
font_path = "res://Fontes/NewakeFont-Demo.otf"

[sub_resource type="DynamicFont" id=19]
size = 75
font_data = SubResource( 18 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="FundoPacientes" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.0
margin_bottom = -15.0
texture = ExtResource( 1 )

[node name="Nomes" type="OptionButton" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 75.0
margin_top = -216.0
margin_right = 1109.0
margin_bottom = -73.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "Selecione um usuário"

[node name="LabelPac" type="Label" parent="."]
margin_left = 75.0
margin_top = 59.0
margin_right = 1250.0
margin_bottom = 301.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 2 )
text = "Pacientes"

[node name="ButtonBack" type="Button" parent="."]
margin_left = 1545.0
margin_top = 974.0
margin_right = 1854.0
margin_bottom = 1053.0
focus_mode = 0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "Voltar"
flat = true

[node name="LabelPP" type="Label" parent="."]
margin_left = 1678.0
margin_top = 39.0
margin_right = 1876.0
margin_bottom = 78.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 6 )
text = "Pill  Prompt"

[node name="Confirm" type="Button" parent="."]
margin_left = 222.0
margin_top = 486.0
margin_right = 924.0
margin_bottom = 622.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.752941, 0.917647, 1, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
text = "Ver informações"

[node name="user" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="user"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -787.5
margin_top = -485.5
margin_right = 787.5
margin_bottom = 485.5
color = Color( 0.0784314, 0.188235, 0.317647, 1 )

[node name="ColorRect3" type="ColorRect" parent="user/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -769.0
margin_top = -465.5
margin_right = 769.0
margin_bottom = 465.5

[node name="LabelNome" type="Label" parent="user/ColorRect/ColorRect3"]
margin_left = 366.0
margin_top = -5.5
margin_right = 1063.0
margin_bottom = 112.5
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 17 )

[node name="LabelUser" type="Label" parent="user/ColorRect/ColorRect3"]
margin_left = 2.5
margin_top = -5.5
margin_right = 362.5
margin_bottom = 112.5
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 17 )
text = "Paciente:"

[node name="LabelRoom" type="Label" parent="user/ColorRect/ColorRect3"]
margin_left = 3.0
margin_top = 69.0
margin_right = 213.0
margin_bottom = 187.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 17 )
text = "Sala:"

[node name="LabelSala" type="Label" parent="user/ColorRect/ColorRect3"]
margin_left = 213.0
margin_top = 69.0
margin_right = 1365.0
margin_bottom = 187.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 17 )

[node name="ButtonBack" type="Button" parent="user/ColorRect/ColorRect3"]
margin_left = 1220.0
margin_top = 835.5
margin_right = 1529.0
margin_bottom = 914.5
focus_mode = 0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 19 )
enabled_focus_mode = 0
text = "Voltar"
flat = true

[node name="LabelGavs" type="Label" parent="user/ColorRect/ColorRect3"]
margin_left = 2.5
margin_top = 150.0
margin_right = 438.5
margin_bottom = 268.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 17 )
text = "Gavetas:"

[node name="LabelDoses" type="Label" parent="user/ColorRect/ColorRect3"]
margin_left = 719.0
margin_top = 150.0
margin_right = 973.0
margin_bottom = 268.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 17 )
text = "Doses:"

[node name="LabelGav1" type="Label" parent="user/ColorRect/ColorRect3"]
margin_left = 3.0
margin_top = 250.0
margin_right = 646.0
margin_bottom = 368.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 17 )

[node name="LabelD1" type="Label" parent="user/ColorRect/ColorRect3"]
margin_left = 719.0
margin_top = 250.0
margin_right = 1362.0
margin_bottom = 368.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 17 )

[node name="LabelD2" type="Label" parent="user/ColorRect/ColorRect3"]
margin_left = 719.0
margin_top = 365.0
margin_right = 1362.0
margin_bottom = 483.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 17 )

[node name="LabelD3" type="Label" parent="user/ColorRect/ColorRect3"]
margin_left = 719.0
margin_top = 490.0
margin_right = 1362.0
margin_bottom = 608.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 17 )

[node name="LabelD4" type="Label" parent="user/ColorRect/ColorRect3"]
margin_left = 719.0
margin_top = 615.0
margin_right = 1362.0
margin_bottom = 733.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 17 )

[node name="LabelD5" type="Label" parent="user/ColorRect/ColorRect3"]
margin_left = 719.0
margin_top = 740.0
margin_right = 1362.0
margin_bottom = 858.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 17 )

[node name="LabelGav2" type="Label" parent="user/ColorRect/ColorRect3"]
margin_left = 3.0
margin_top = 365.0
margin_right = 675.0
margin_bottom = 483.0
rect_pivot_offset = Vector2( 126.5, 286 )
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 17 )

[node name="LabelGav3" type="Label" parent="user/ColorRect/ColorRect3"]
margin_left = 3.0
margin_top = 490.0
margin_right = 661.0
margin_bottom = 608.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 17 )

[node name="LabelGav4" type="Label" parent="user/ColorRect/ColorRect3"]
margin_left = 3.0
margin_top = 615.0
margin_right = 649.0
margin_bottom = 733.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 17 )

[node name="LabelGav5" type="Label" parent="user/ColorRect/ColorRect3"]
margin_left = 3.0
margin_top = 740.0
margin_right = 587.0
margin_bottom = 858.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 17 )

[connection signal="pressed" from="ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="user/ColorRect/ColorRect3/ButtonBack" to="." method="_on_ButtonBack2_pressed"]
